[gd_scene load_steps=4 format=3 uid="uid://ctw3tower001"]

[ext_resource type="Script" path="res://scripts/towers/tower.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tower"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 150.0

[node name="Tower" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1")

[node name="BaseSprite" type="Sprite2D" parent="."]
z_index = 1

[node name="TurretSprite" type="Sprite2D" parent="."]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tower")

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")
debug_color = Color(0.2, 0.6, 0.9, 0.15)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="Muzzle" type="Marker2D" parent="TurretSprite"]
position = Vector2(24, 0)

[node name="RangeIndicator" type="Node2D" parent="."]
z_index = -1
